convergence/dev/manifast/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    # Ingress Core Settings
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    # SSL Settings
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:940168446867:certificate/7ce5554b-b489-4de5-a393-02ee0d00c9e1
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
  - host: www.mclabha.com
    http:
      paths:
      - path: "/post_image"
        pathType: Prefix
        backend:
          service:
            name: dev-media-svc
            port: 
              number: 80
      - path: "/no_user"
        pathType: Prefix
        backend:
          service:
            name: dev-bigdata-svc
            port: 
              number: 80
